k8s/corsproxy.rancher.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: cors-anywhere
  labels:
    app: cors-anywhere
spec:
  replicas: 3
  selector:
    matchLabels:
      application: cors-anywhere
  template:
    metadata:
      labels:
        application: cors-anywhere
    spec:
      containers:
        - image: redocly/cors-anywhere
          imagePullPolicy: Always
          name: cors-anywhere
          ports:
            - containerPort: 8080
              protocol: TCP
          securityContext:
            privileged: false
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: cors-anywhere
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    application: cors-anywhere
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: rancher
  name: cors-anywhere-ingress
  namespace: default
spec:
  rules:
    - host: cors.proxy.fazenda.solutions
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: cors-anywhere
                port:
                  number: 80
  tls:
    - hosts:
        - cors.proxy.fazenda.solutions
      secretName: cors-anywhere-cert
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: rancher
  name: cors-anywhere-ingress-tls
  namespace: cattle-system
spec:
  rules:
    - host: cors.proxy.fazenda.solutions
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: cors-anywhere
                port:
                  number: 80
  tls:
    - hosts:
        - cors.proxy.fazenda.solutions
      secretName: cors-anywhere-cert-tls
